# gtkmm4

./: .gitignore  Capture.code-workspace  README.md  app_window.cc  app_window.h  application.cc  application.h  athena.cc  athena.cpp  athena.h  cn.yatiger.athena.desktop.in  custom_dialog.cc  custom_dialog.h  main.cc  main.cpp  mainwindow.cc  mainwindow.cpp  mainwindow.h  meson.build  org.gtkmm.complex.example.desktop.in
.cache/clangd/index/: main.cc.8F7997D7D99C9793.idx  mainwindow.cc.E387F4CED66CADB0.idx
data/: meson.build
resources/: app.gresource.xml
resources/ui/: custom_dialog.ui  home.blp  mainwindow.blp  window.blp
resources/ui/chapters/: basic_syntax.blp  functions.blp  welcome.blp
ui/: app_window.ui  mainwindow.ui
